--- a/indes.css
+++ b/indes.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'mali', monospace;
+    transition: 0.5s;
 }
 
 body {
@@ -57,6 +58,7 @@ select {
     font-size: 20px;
     line-height: 26px;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
 .cointa {
@@ -87,6 +89,7 @@ select {
     align-items: center;
     color: #FFFFFF;
     border: none;
+    cursor: pointer;
 }
 
 .players {
@@ -134,6 +137,7 @@ select {
     border: none;
     padding: 0;
     margin-left: 20px;
+    cursor: pointer;
 }
 
 .playersList {
@@ -291,7 +295,137 @@ li {
     animation-duration: 2s;
 }
 
-  
+@media only screen and (max-width: 1055px) {
+
+    .pointsSlc {
+        width: 60%;
+    }
+
+    label p {
+        width: 40%;
+        text-align: center;
+    }
+
+    .cointa {
+        width: 60%;
+        height: 70vh;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .start {
+        margin-bottom: 2%;
+        margin-right: 0;
+        margin: 2% 0 2% 0;
+        width: 80%;
+    }
+
+    .players {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        top: 0;
+        left: 0;
+        margin-top: 2%;
+    }
+
+    .playerName {
+        border-radius: 20px;
+        width: 80%;
+        padding: 2px;
+    }
+
+    .add {
+        margin-top: 1%;
+        border-radius: 20px;
+        margin-left: 0;
+        padding: 2px;
+    }
+
+    .playersList {
+        padding-top: 17%;
+    }
+
+    .alertOne {
+        position: relative;
+        top: 0;
+        margin-top: 2%;
+    }
+}  
+
+@media only screen and (max-width: 495px) {
+
+    .pointsSlc {
+        height: 10vh;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    label p {
+        font-size: 12px;
+        width: 40%;
+        height: 7vh;
+        line-height: normal;
+        font-weight: 100;
+        margin: 0;
+    }
+
+    select {
+        font-size: 16px;
+        width: 30%;
+        height: 7vh;
+        line-height: unset;
+        margin-left: 5px;
+    }
+
+    .playerName {
+        margin-top: 5px;
+        font-size: 12px;
+        width: 80%;
+        line-height: normal;
+    }
+
+    .add {
+        font-size: 12px;
+        width: 80%;
+        line-height: normal;
+    }
+
+    .alertOne {
+        line-height: normal;
+        width: 80%;
+    }
+
+    .playersList {
+        width: 90%;
+        margin-top: 15%;
+    }
+
+    li {
+        width: 50%;
+        font-size: 12px;
+        line-height: normal;
+        height: 3vh;
+    }
+
+    .cointa {
+        height: fit-content;
+    }
+
+    .start {
+        margin-top: 5vh;
+        font-size: 12px;
+        height: 4.5vh;
+
+    }
+
+}
+
+
 @keyframes fadeInOut {
     0% {
         opacity: 0;
